Closed Bug 705247 Opened 14 years ago Closed 14 years ago

IonMonkey: getgname does not need a shape guard with TI

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file, 1 obsolete file)

Since our shape guards are kind of broken now (on purpose, waiting for ObjShrink), we need this to run (a modified version of) bitwise-and.
Attached patch Patch (obsolete) — Splinter Review
We can probably get rid of some TypeOracle methods. I'll get to it after getelem/setelem lands to avoid updating the patch David is reviewing.
Attachment #576895 - Flags: review?(dvander)
Attachment #576895 - Flags: review?(bhackett1024)
Attached patch PatchSplinter Review
Clarify the abort message a bit. According to the isOwnProperty comment we don't abort for properties that are non-writable etc on creation.
Attachment #576895 - Attachment is obsolete: true
Attachment #576895 - Flags: review?(dvander)
Attachment #576895 - Flags: review?(bhackett1024)
Attachment #576897 - Flags: review?(dvander)
Attachment #576897 - Flags: review?(bhackett1024)
Attachment #576897 - Flags: review?(bhackett1024) → review+
Attachment #576897 - Flags: review?(dvander) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: