Getgname does not need a shape guard with TI (bug 705247, r=dvander,bhackett)